@@ -140,6 +140,8 @@ public class DisMaxRequestHandler
   long numErrors;
   
   SolrParams defaults;
+  SolrParams appends;
+  SolrParams invariants;
     
   /** shorten the class referneces for utilities */
   private static class U extends SolrPluginUtils {
@@ -206,6 +208,14 @@ public class DisMaxRequestHandler
       if (o != null && o instanceof NamedList) {
         defaults = SolrParams.toSolrParams((NamedList)o);
       }
+      o = args.get("appends");
+      if (o != null && o instanceof NamedList) {
+        appends = SolrParams.toSolrParams((NamedList)o);
+      }
+      o = args.get("invariants");
+      if (o != null && o instanceof NamedList) {
+        invariants = SolrParams.toSolrParams((NamedList)o);
+      }
     }
   }
 
@@ -213,7 +223,7 @@ public class DisMaxRequestHandler
     numRequests++;
         
     try {
-      U.setDefaults(req,defaults);
+      U.setDefaults(req,defaults,appends,invariants);
       SolrParams params = req.getParams();
       
       int flags = 0;
